crates/fec-parser/tests/snapshots/itemizations__sa3l_1775683_v8_4_ind.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"SA3L_1775683.fec\")"
snapshot_kind: text
---
[
  {
    "family": "SA3L",
    "form_type": "SA3L",
    "filer_committee_id": "C00828541",
    "transaction_id": "SA3L.4369",
    "back_reference_transaction_id": null,
    "back_reference_schedule_name": null,
    "lobbyist_registrant": {
      "entity_type": "IND",
      "organization_name": null,
      "name": {
        "first_name": "JEFF",
        "last_name": "MILLER",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "4723 CAT MOUNTAIN DR",
        "street_2": null,
        "city": "AUSTIN",
        "state": "TX",
        "zip_code": "78731"
      }
    },
    "lobbyist_registrant_employer": "MILLER STRATEGIES LLC",
    "lobbyist_registrant_occupation": "CEO",
    "lobbyist_registrant_pac_fec_id": null,
    "lobbyist_registrant_pac_name": null,
    "election_code": null,
    "election_other_description": null,
    "contribution_date": null,
    "bundled_amount": 84000.0,
    "bundled_amount_semi_annual": null,
    "contribution_purpose_code": null,
    "contribution_purpose_description": null,
    "memo": false,
    "memo_text": null,
    "image_number": null
  }
]
